# Pilk-Reborn

./: .gitignore  CMakeLists.txt  imgui.ini
Pilk2D/: CMakeLists.txt
PilkGame/: CMakeLists.txt
PilkGame/include/: TestScene.h
PilkGame/resources/shaders/: SpriteSheet.frag
include/: CollisionManager.h
src/: Camera.cpp
